fastapi/fastapi-all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webide-net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ide-fastapi
  namespace: webide-net
  labels:
    app: ide-fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ide-fastapi
  template:
    metadata:
      labels:
        app: ide-fastapi
    spec:
      serviceAccountName: ide-fastapi-sa
      containers:
        - name: ide-fastapi
          image: jaewoo6257/ide-demo-fastapi:echo
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: ide-fastapi-svc
  namespace: webide-net
spec:
  selector:
    app: ide-fastapi
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
