fastapi/mysql-all.yaml
# 3. MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: webide-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc

---
# 4. MySQL Service
# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql
#   namespace: webide-net
# spec:
#   type: ClusterIP
#   selector:
#     app: mysql
#   ports:
#     - port: 3306
#       targetPort: 3306

# 개발용 서비스
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: webide-net
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 31111
