fastapi/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webide-react
  namespace: webide-net
  labels:
    app: webide-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webide-react
  template:
    metadata:
      labels:
        app: webide-react
    spec:
      containers:
        - name: webide-react
          image: jaewoo2/webide-react:1.2.13
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webide-react-svc
  namespace: webide-net
spec:
  type: ClusterIP
  selector:
    app: webide-react
  ports:
    - port: 80
      targetPort: 80
