fastapi/ingress-react.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webide-react-ing
  namespace: webide-net
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webide-react-svc
                port:
                  number: 80
